@@ -1,4 +1,4 @@
-/* $Id: ares_gethostbyname.c,v 1.41 2008-09-17 01:02:57 yangtse Exp $ */
+/* $Id: ares_gethostbyname.c,v 1.42 2008-11-19 15:16:16 bagder Exp $ */
 
 /* Copyright 1998 by the Massachusetts Institute of Technology.
  *
@@ -287,6 +287,31 @@ static int fake_hostent(const char *name, int family, ares_host_callback callbac
 
   free((char *)(hostent.h_name));
   return 1;
+}
+
+/* This is an API method */
+int ares_gethostbyname_file(ares_channel channel, const char *name,
+                            int family, struct hostent **host)
+{
+  /* We only take the channel to ensure that ares_init() been called. */
+  if(channel == NULL)
+    {
+      /* Anything will do, really.  This seems fine, and is consistent with
+         other error cases. */
+      *host = NULL;
+      return ARES_ENOTFOUND;
+    }
+  
+  /* Just chain to the internal implementation we use here; it's exactly
+   * what we want.  
+   */
+  const int result = file_lookup(name, family, host);
+  if(result != ARES_SUCCESS)
+    {
+      /* We guarantee a NULL hostent on failure. */
+      *host = NULL;
+    }
+  return result;
 }
 
 static int file_lookup(const char *name, int family, struct hostent **host)
